app/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  annotations:
    consul.hashicorp.com/connect-inject: "true"
