app/ingressshop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoshop-ingress
  namespace: demo
  annotations:
     cert-manager.io/cluster-issuer: letsencrypt-k8s
     kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: demoshop.ust.inc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
  tls:
  - hosts:
    - demoshop.ust.inc
    secretName: demoshop-tls # as expected by argocd-server
